src/widgets/snapshots/timr_tui__widgets__countdown_test__countdown_initial.snap
---
source: src/widgets/countdown_test.rs
expression: t.backend()
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                      █████ █████    █████ █████                      "
"                         ██ ██ ██ ██ ██ ██ ██ ██                      "
"                      █████ ██ ██    ██ ██ ██ ██                      "
"                         ██ ██ ██ ██ ██ ██ ██ ██                      "
"                      █████ █████    █████ █████                      "
"                                                                      "
"                             COUNTDOWN []                             "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
