src/widgets/snapshots/timr_tui__widgets__countdown_test__countdown_until_hhmmss.snap
---
source: src/widgets/countdown_test.rs
expression: t.backend()
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                      █████ █████    █████ █████                      "
"                         ██ ██ ██ ██ ██ ██ ██ ██                      "
"                      █████ ██ ██    ██ ██ ██ ██                      "
"                         ██ ██ ██ ██ ██ ██ ██ ██                      "
"                      █████ █████    █████ █████                      "
"                                                                      "
"                             COUNTDOWN []                             "
"                           FINISH 15:00:00                            "
"                                                                      "
"                                                                      "
"                                                                      "
